--- a/internship-finder/index.html
+++ b/internship-finder/index.html
@@ -34,7 +34,7 @@
         <!-- Sections will be loaded/shown here by JavaScript -->
         <section id="home-section" class="content-section active">
             <h1>Welcome to Internship Finder</h1>
-            <p>Find your dream internship or the perfect candidate.</p>
+            <p>Find your dream internships or the perfect candidate.</p>
             <div class="search-bar">
                 <input type="text" id="search-input" placeholder="Search by keyword, category, location...">
                 <button onclick="searchInternships()">Search</button>
