--- a/internship-finder/index.html
+++ b/internship-finder/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="notification-container"></div>
     <header>
         <nav>
             <div class="logo">
@@ -15,6 +16,7 @@
             <ul class="nav-links">
                 <li><a href="#" onclick="showSection('home-section'); return false;">Home</a></li>
                 <li><a href="#" onclick="showSection('internships-section'); loadInternships(); return false;">Browse Internships</a></li>
+                 <li id="nav-profile" class="hidden"><a href="#" onclick="loadProfilePage(); return false;">My Profile</a></li>
                 <li id="nav-login"><a href="#" onclick="showSection('login-section'); return false;">Login</a></li>
                 <li id="nav-register"><a href="#" onclick="showSection('register-section'); return false;">Register</a></li>
                 <li id="nav-student-dashboard" class="hidden"><a href="#" onclick="showSection('student-dashboard-section'); loadStudentDashboard(); return false;">My Dashboard</a></li>
@@ -187,11 +189,57 @@
                 <button type="submit">Post Internship</button>
             </form>
         </section>
+        <!-- Add this new section at the end of your <main> element in index.html -->
+
+<section id="profile-section" class="content-section hidden">
+    <h2>My Profile</h2>
+    <form id="profile-form">
+        <!-- Fields for ALL users -->
+        <div>
+            <label for="profile-name">Full Name:</label>
+            <input type="text" id="profile-name" required>
+        </div>
+        <div>
+            <label for="profile-email">Email:</label>
+            <input type="email" id="profile-email" disabled> <!-- Email cannot be changed -->
+        </div>
+
+        <!-- Fields ONLY for Employers -->
+        <div id="employer-profile-fields" class="hidden">
+            <div>
+                <label for="profile-company-website">Company Website:</label>
+                <input type="text" id="profile-company-website" placeholder="e.g., https://mycompany.com">
+            </div>
+            <div>
+                <label for="profile-company-description">Company Description:</label>
+                <textarea id="profile-company-description" rows="4"></textarea>
+            </div>
+        </div>
+
+        <!-- Fields ONLY for Students -->
+        <div id="student-profile-fields" class="hidden">
+            <div>
+                <label for="profile-skills">My Skills (comma-separated):</label>
+                <input type="text" id="profile-skills" placeholder="e.g., HTML, CSS, JavaScript, Node.js">
+            </div>
+            <div>
+                <label for="profile-education">Education:</label>
+                <input type="text" id="profile-education" placeholder="e.g., BS in Computer Science">
+            </div>
+            <div>
+                <label for="profile-resume-link">Resume/Portfolio Link:</label>
+                <input type="text" id="profile-resume-link" placeholder="e.g., Link to your Google Drive resume or online portfolio">
+            </div>
+        </div>
+
+        <button type="submit">Update Profile</button>
+    </form>
+</section>
 
     </main>
 
     <footer>
-        <p>© 2024 Internship Finder - Ashami Rasool & Shoiab Bhatti</p>
+        <p>© 2024 Internship Finder - Abdul Moeez</p>
     </footer>
 
     <script src="js/app.js"></script>
